--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 remote_theme: pages-themes/architect@v0.2.0
-markdown: GML
+markdown: kramdown
+
+kramdown:
+  input: GFM
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
